Fixed long cards heigth on tablet mode.

--- a/styles/style.css
+++ b/styles/style.css
@@ -155,7 +155,7 @@ footer
     {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(3, auto);
         gap: 1rem;
         grid-template-areas:
             'aside aside'
